@@ -1,180 +1,456 @@
 package com.example.spms.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.toolkit.StringUtils;
+import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.example.spms.common.Page;
+import com.example.spms.exception.CustomException;
+import com.example.spms.enums.ResultCode;
+import com.example.spms.mapper.BillInfoMapper;
+import com.example.spms.mapper.BuildingInfoMapper;
+import com.example.spms.mapper.CommunityInfoMapper;
+import com.example.spms.mapper.ComplaintSuggestionMapper;
+import com.example.spms.mapper.HouseInfoMapper;
+import com.example.spms.mapper.OwnerHouseRelMapper;
+import com.example.spms.mapper.OwnerInfoMapper;
+import com.example.spms.mapper.RepairOrderMapper;
+import com.example.spms.mapper.SysUserInfoMapper;
 import com.example.spms.model.bo.ComplaintApplyRequest;
+import com.example.spms.model.bo.OwnerQueryRequest;
+import com.example.spms.model.bo.OwnerSaveRequest;
+import com.example.spms.model.bo.OwnerUpdateRequest;
 import com.example.spms.model.bo.RepairApplyRequest;
 import com.example.spms.model.po.BillInfo;
+import com.example.spms.model.po.BuildingInfo;
+import com.example.spms.model.po.CommunityInfo;
 import com.example.spms.model.po.ComplaintSuggestion;
+import com.example.spms.model.po.HouseInfo;
+import com.example.spms.model.po.OwnerHouseRel;
+import com.example.spms.model.po.OwnerInfo;
 import com.example.spms.model.po.RepairOrder;
 import com.example.spms.model.po.SysUserInfo;
 import com.example.spms.model.vo.OwnerBillVO;
 import com.example.spms.model.vo.OwnerComplaintVO;
 import com.example.spms.model.vo.OwnerHomeVO;
+import com.example.spms.model.vo.OwnerHouseRelVO;
 import com.example.spms.model.vo.OwnerRepairVO;
-import com.example.spms.mapper.BillInfoMapper;
-import com.example.spms.mapper.ComplaintSuggestionMapper;
-import com.example.spms.mapper.RepairOrderMapper;
-import com.example.spms.mapper.SysUserInfoMapper;
+import com.example.spms.model.vo.OwnerVO;
 import com.example.spms.service.OwnerService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
-/**
- * 业主端服务实现
- */
 @Service
 @RequiredArgsConstructor
-public class OwnerServiceImpl implements OwnerService {
+public class OwnerServiceImpl extends ServiceImpl<OwnerInfoMapper, OwnerInfo>
+        implements OwnerService {
 
+    private final HouseInfoMapper houseInfoMapper;
+    private final BuildingInfoMapper buildingInfoMapper;
+    private final CommunityInfoMapper communityInfoMapper;
+    private final OwnerHouseRelMapper ownerHouseRelMapper;
     private final BillInfoMapper billInfoMapper;
     private final RepairOrderMapper repairOrderMapper;
     private final ComplaintSuggestionMapper complaintSuggestionMapper;
     private final SysUserInfoMapper sysUserInfoMapper;
 
-    private static final SimpleDateFormat SDF = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+    private static final SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+
+    @Override
+    public Page<OwnerVO> pageQuery(OwnerQueryRequest request) {
+        LambdaQueryWrapper<OwnerInfo> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(OwnerInfo::getIsDeleted, 0);
+        wrapper.like(StringUtils.isNotBlank(request.getOwnerName()),
+                OwnerInfo::getOwnerName, request.getOwnerName());
+        wrapper.eq(StringUtils.isNotBlank(request.getOwnerPhone()),
+                OwnerInfo::getOwnerPhone, request.getOwnerPhone());
+        wrapper.eq(request.getStatus() != null,
+                OwnerInfo::getStatus, request.getStatus());
+        wrapper.orderByDesc(OwnerInfo::getCreateTime);
+
+        com.baomidou.mybatisplus.extension.plugins.pagination.Page<OwnerInfo> mpPage =
+                new com.baomidou.mybatisplus.extension.plugins.pagination.Page<>(request.getPageNum(), request.getPageSize());
+
+        com.baomidou.mybatisplus.extension.plugins.pagination.Page<OwnerInfo> result = this.page(mpPage, wrapper);
+
+        List<OwnerVO> records = result.getRecords().stream()
+                .map(this::toVO)
+                .collect(Collectors.toList());
+
+        Page<OwnerVO> customPage = new Page<>();
+        customPage.setTotal(result.getTotal());
+        customPage.setPages(result.getPages());
+        customPage.setCurrent(result.getCurrent());
+        customPage.setSize(result.getSize());
+        customPage.setRecords(records);
+        return customPage;
+    }
+
+    @Override
+    @Transactional
+    public void saveOwner(OwnerSaveRequest request) {
+        LambdaQueryWrapper<OwnerInfo> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(OwnerInfo::getOwnerPhone, request.getOwnerPhone())
+                .eq(OwnerInfo::getIsDeleted, 0);
+        if (this.count(wrapper) > 0) {
+            throw new CustomException(ResultCode.FAIL, "业主电话已存在");
+        }
+
+        OwnerInfo entity = new OwnerInfo();
+        BeanUtils.copyProperties(request, entity);
+        entity.setIsDeleted(0);
+        entity.setVersion(0);
+        this.save(entity);
+    }
+
+    @Override
+    @Transactional
+    public void updateOwner(OwnerUpdateRequest request) {
+        OwnerInfo exist = this.getById(request.getId());
+        if (exist == null || exist.getIsDeleted() == 1) {
+            throw new CustomException(ResultCode.NOT_FOUND);
+        }
+
+        if (StringUtils.isNotBlank(request.getOwnerPhone())) {
+            LambdaQueryWrapper<OwnerInfo> wrapper = new LambdaQueryWrapper<>();
+            wrapper.eq(OwnerInfo::getOwnerPhone, request.getOwnerPhone())
+                    .eq(OwnerInfo::getIsDeleted, 0)
+                    .ne(OwnerInfo::getId, request.getId());
+            if (this.count(wrapper) > 0) {
+                throw new CustomException(ResultCode.FAIL, "业主电话已存在");
+            }
+        }
+
+        BeanUtils.copyProperties(request, exist, "id");
+        this.updateById(exist);
+    }
+
+    @Override
+    public OwnerVO getOwnerDetail(Long id) {
+        OwnerInfo entity = this.getById(id);
+        if (entity == null || entity.getIsDeleted() == 1) {
+            throw new CustomException(ResultCode.NOT_FOUND);
+        }
+        return toVO(entity);
+    }
+
+    @Override
+    public OwnerVO getOwnerByHouseId(Long houseId) {
+        LambdaQueryWrapper<OwnerHouseRel> relWrapper = new LambdaQueryWrapper<>();
+        relWrapper.eq(OwnerHouseRel::getHouseInfoId, houseId)
+                .eq(OwnerHouseRel::getIsDeleted, 0)
+                .orderByDesc(OwnerHouseRel::getIsPrimary)
+                .last("LIMIT 1");
+        OwnerHouseRel rel = ownerHouseRelMapper.selectOne(relWrapper);
+
+        if (rel == null) {
+            return null;
+        }
+
+        OwnerInfo owner = this.getById(rel.getOwnerInfoId());
+        return owner != null ? toVO(owner) : null;
+    }
+
+    @Override
+    public List<OwnerHouseRelVO> listOwnerHouses(Long ownerId) {
+        LambdaQueryWrapper<OwnerHouseRel> relWrapper = new LambdaQueryWrapper<>();
+        relWrapper.eq(OwnerHouseRel::getOwnerInfoId, ownerId)
+                .eq(OwnerHouseRel::getIsDeleted, 0)
+                .orderByDesc(OwnerHouseRel::getIsPrimary);
+        List<OwnerHouseRel> rels = ownerHouseRelMapper.selectList(relWrapper);
+
+        if (rels.isEmpty()) {
+            return List.of();
+        }
+
+        return rels.stream().map(rel -> {
+            OwnerHouseRelVO vo = new OwnerHouseRelVO();
+            BeanUtils.copyProperties(rel, vo);
+
+            HouseInfo house = houseInfoMapper.selectById(rel.getHouseInfoId());
+            if (house != null) {
+                BuildingInfo building = buildingInfoMapper.selectById(house.getBuildingId());
+                if (building != null) {
+                    CommunityInfo community = communityInfoMapper.selectById(building.getCommunityId());
+                    if (community != null) {
+                        vo.setHouseFullName(community.getCommunityName() + "-"
+                                + building.getBuildingName() + "-"
+                                + house.getHouseNumber());
+                    }
+                }
+            }
+
+            return vo;
+        }).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<OwnerVO> listAll() {
+        LambdaQueryWrapper<OwnerInfo> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(OwnerInfo::getIsDeleted, 0)
+                .orderByAsc(OwnerInfo::getOwnerName);
+        return this.list(wrapper).stream()
+                .map(this::toVO)
+                .collect(Collectors.toList());
+    }
+
+    // ========== 业主端接口实现 ==========
 
     @Override
     public OwnerHomeVO getHomeData(Long userId) {
         SysUserInfo user = sysUserInfoMapper.selectById(userId);
+        if (user == null) {
+            throw new CustomException(ResultCode.USER_NOT_FOUND);
+        }
 
-        long pendingBills = billInfoMapper.selectCount(
-                new LambdaQueryWrapper<BillInfo>()
-                        .eq(BillInfo::getOwnerId, userId)
-                        .eq(BillInfo::getStatus, 0)
-                        .eq(BillInfo::getIsDeleted, 0)
-        );
+        // 获取用户角色
+        List<String> roles = sysUserInfoMapper.selectRoleCodesByUserId(userId);
 
-        long repairs = repairOrderMapper.selectCount(
-                new LambdaQueryWrapper<RepairOrder>()
-                        .eq(RepairOrder::getOwnerId, userId)
-                        .eq(RepairOrder::getIsDeleted, 0)
-        );
+        // 查询业主信息
+        LambdaQueryWrapper<OwnerInfo> ownerWrapper = new LambdaQueryWrapper<>();
+        ownerWrapper.eq(OwnerInfo::getOwnerPhone, user.getPhoneNumber())
+                .eq(OwnerInfo::getIsDeleted, 0);
+        OwnerInfo owner = this.getOne(ownerWrapper);
 
-        long complaints = complaintSuggestionMapper.selectCount(
-                new LambdaQueryWrapper<ComplaintSuggestion>()
-                        .eq(ComplaintSuggestion::getOwnerId, userId)
-                        .eq(ComplaintSuggestion::getIsDeleted, 0)
-        );
+        // 统计待支付账单数量
+        long pendingBillCount = 0;
+        // 统计报修数量
+        long repairCount = 0;
+        // 统计投诉数量
+        long complaintCount = 0;
+
+        if (owner != null) {
+            pendingBillCount = billInfoMapper.selectCount(
+                    new LambdaQueryWrapper<BillInfo>()
+                            .eq(BillInfo::getOwnerId, owner.getId())
+                            .eq(BillInfo::getStatus, 0)
+                            .eq(BillInfo::getIsDeleted, 0)
+            );
+
+            repairCount = repairOrderMapper.selectCount(
+                    new LambdaQueryWrapper<RepairOrder>()
+                            .eq(RepairOrder::getOwnerId, owner.getId())
+                            .eq(RepairOrder::getIsDeleted, 0)
+            );
+
+            complaintCount = complaintSuggestionMapper.selectCount(
+                    new LambdaQueryWrapper<ComplaintSuggestion>()
+                            .eq(ComplaintSuggestion::getOwnerId, owner.getId())
+                            .eq(ComplaintSuggestion::getIsDeleted, 0)
+            );
+        }
 
         return OwnerHomeVO.builder()
                 .userId(userId)
-                .userName(user != null ? user.getUserName() : null)
-                .fullName(user != null ? user.getFullName() : null)
-                .phoneNumber(user != null ? user.getPhoneNumber() : null)
-                .roles(null)
-                .pendingBillCount((int) pendingBills)
-                .repairCount((int) repairs)
-                .complaintCount((int) complaints)
+                .userName(user.getUserName())
+                .fullName(user.getFullName())
+                .phoneNumber(user.getPhoneNumber())
+                .roles(roles)
+                .pendingBillCount((int) pendingBillCount)
+                .repairCount((int) repairCount)
+                .complaintCount((int) complaintCount)
                 .build();
     }
 
     @Override
     public List<OwnerBillVO> listBills(Long userId) {
+        OwnerInfo owner = getOwnerByUserId(userId);
+        if (owner == null) {
+            return List.of();
+        }
+
         List<BillInfo> bills = billInfoMapper.selectList(
                 new LambdaQueryWrapper<BillInfo>()
-                        .eq(BillInfo::getOwnerId, userId)
+                        .eq(BillInfo::getOwnerId, owner.getId())
                         .eq(BillInfo::getIsDeleted, 0)
                         .orderByDesc(BillInfo::getCreateTime)
         );
-        return bills.stream().map(b -> OwnerBillVO.builder()
-                .id(b.getId())
-                .billNo(b.getBillNo())
-                .itemName(b.getBillPeriod())
-                .amount(b.getBillAmount())
-                .status(b.getStatus())
-                .createTime(b.getCreateTime() != null ? SDF.format(b.getCreateTime()) : null)
-                .deadline(b.getPayDeadline() != null ? SDF.format(b.getPayDeadline()) : null)
-                .build()
-        ).toList();
+
+        return bills.stream().map(bill -> {
+            OwnerBillVO vo = OwnerBillVO.builder()
+                    .id(bill.getId())
+                    .billNo(bill.getBillNo())
+                    .itemName("物业费") // 可以根据 feeItemId 查询费用项目名称
+                    .amount(bill.getBillAmount())
+                    .status(bill.getStatus())
+                    .createTime(formatDate(bill.getCreateTime()))
+                    .deadline(formatDate(bill.getPayDeadline()))
+                    .build();
+            return vo;
+        }).collect(Collectors.toList());
     }
 
     @Override
     public List<OwnerRepairVO> listRepairs(Long userId) {
-        List<RepairOrder> orders = repairOrderMapper.selectList(
+        OwnerInfo owner = getOwnerByUserId(userId);
+        if (owner == null) {
+            return List.of();
+        }
+
+        List<RepairOrder> repairs = repairOrderMapper.selectList(
                 new LambdaQueryWrapper<RepairOrder>()
-                        .eq(RepairOrder::getOwnerId, userId)
+                        .eq(RepairOrder::getOwnerId, owner.getId())
                         .eq(RepairOrder::getIsDeleted, 0)
                         .orderByDesc(RepairOrder::getCreateTime)
         );
-        return orders.stream().map(o -> OwnerRepairVO.builder()
-                .id(o.getId())
-                .orderNo(o.getOrderNo())
-                .repairType(o.getRepairType())
-                .repairDesc(o.getRepairDesc())
-                .repairPhone(o.getRepairPhone())
-                .priority(o.getPriority())
-                .status(o.getStatus())
-                .repairCost(o.getRepairCost())
-                .evaluateScore(o.getEvaluateScore())
-                .evaluateComment(o.getEvaluateComment())
-                .createTime(o.getCreateTime() != null ? SDF.format(o.getCreateTime()) : null)
-                .repairTime(o.getRepairTime() != null ? SDF.format(o.getRepairTime()) : null)
-                .build()
-        ).toList();
+
+        return repairs.stream().map(repair -> {
+            OwnerRepairVO vo = OwnerRepairVO.builder()
+                    .id(repair.getId())
+                    .orderNo(repair.getOrderNo())
+                    .repairType(repair.getRepairType())
+                    .repairDesc(repair.getRepairDesc())
+                    .repairPhone(repair.getRepairPhone())
+                    .priority(repair.getPriority())
+                    .status(repair.getStatus())
+                    .repairCost(repair.getRepairCost())
+                    .evaluateScore(repair.getEvaluateScore())
+                    .evaluateComment(repair.getEvaluateComment())
+                    .createTime(formatDate(repair.getCreateTime()))
+                    .repairTime(formatDate(repair.getRepairTime()))
+                    .build();
+            return vo;
+        }).collect(Collectors.toList());
     }
 
     @Override
+    @Transactional
     public void applyRepair(Long userId, RepairApplyRequest request) {
-        RepairOrder order = new RepairOrder();
-        order.setOrderNo("RPR" + System.currentTimeMillis());
-        order.setOwnerId(userId);
-        order.setRepairDesc(request.getContent());
-        order.setRepairPhone(request.getContactPhone());
-        order.setRepairType(0);
-        order.setPriority(0);
-        order.setStatus(0);
-        order.setIsDeleted(0);
-        order.setVersion(1);
-        order.setCreateTime(new Date());
-        order.setUpdateTime(new Date());
-        order.setCreateUser(userId);
-        order.setUpdateUser(userId);
-        repairOrderMapper.insert(order);
+        OwnerInfo owner = getOwnerByUserId(userId);
+        if (owner == null) {
+            throw new CustomException(ResultCode.NOT_FOUND, "业主信息不存在");
+        }
+
+        // 获取业主的主要房屋
+        OwnerHouseRel rel = ownerHouseRelMapper.selectOne(
+                new LambdaQueryWrapper<OwnerHouseRel>()
+                        .eq(OwnerHouseRel::getOwnerInfoId, owner.getId())
+                        .eq(OwnerHouseRel::getIsPrimary, 1)
+                        .eq(OwnerHouseRel::getIsDeleted, 0)
+                        .last("LIMIT 1")
+        );
+
+        if (rel == null) {
+            throw new CustomException(ResultCode.FAIL, "该业主未关联房屋");
+        }
+
+        String orderNo = "REP" + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
+
+        RepairOrder repair = new RepairOrder();
+        repair.setOrderNo(orderNo);
+        repair.setHouseId(rel.getHouseInfoId());
+        repair.setOwnerId(owner.getId());
+        repair.setRepairDesc(request.getContent());
+        repair.setRepairPhone(StringUtils.isNotBlank(request.getContactPhone())
+                ? request.getContactPhone() : owner.getOwnerPhone());
+        repair.setStatus(1); // 待派单
+        repair.setPriority(2); // 中优先级
+        repair.setIsDeleted(0);
+        repair.setVersion(0);
+
+        repairOrderMapper.insert(repair);
     }
 
     @Override
     public List<OwnerComplaintVO> listComplaints(Long userId) {
-        List<ComplaintSuggestion> list = complaintSuggestionMapper.selectList(
+        OwnerInfo owner = getOwnerByUserId(userId);
+        if (owner == null) {
+            return List.of();
+        }
+
+        List<ComplaintSuggestion> complaints = complaintSuggestionMapper.selectList(
                 new LambdaQueryWrapper<ComplaintSuggestion>()
-                        .eq(ComplaintSuggestion::getOwnerId, userId)
+                        .eq(ComplaintSuggestion::getOwnerId, owner.getId())
                         .eq(ComplaintSuggestion::getIsDeleted, 0)
                         .orderByDesc(ComplaintSuggestion::getCreateTime)
         );
-        return list.stream().map(c -> OwnerComplaintVO.builder()
-                .id(c.getId())
-                .complaintNo(c.getComplaintNo())
-                .type(c.getType())
-                .title(c.getTitle())
-                .content(c.getContent())
-                .contactPhone(c.getContactPhone())
-                .status(c.getStatus())
-                .replyContent(c.getReplyContent())
-                .replyTime(c.getReplyTime() != null ? SDF.format(c.getReplyTime()) : null)
-                .createTime(c.getCreateTime() != null ? SDF.format(c.getCreateTime()) : null)
-                .build()
-        ).toList();
+
+        return complaints.stream().map(complaint -> {
+            OwnerComplaintVO vo = OwnerComplaintVO.builder()
+                    .id(complaint.getId())
+                    .complaintNo(complaint.getComplaintNo())
+                    .type(complaint.getType())
+                    .title(complaint.getTitle())
+                    .content(complaint.getContent())
+                    .contactPhone(complaint.getContactPhone())
+                    .status(complaint.getStatus())
+                    .replyContent(complaint.getReplyContent())
+                    .replyTime(formatDate(complaint.getReplyTime()))
+                    .createTime(formatDate(complaint.getCreateTime()))
+                    .build();
+            return vo;
+        }).collect(Collectors.toList());
     }
 
     @Override
+    @Transactional
     public void applyComplaint(Long userId, ComplaintApplyRequest request) {
-        ComplaintSuggestion entity = new ComplaintSuggestion();
-        entity.setComplaintNo("CSP" + System.currentTimeMillis());
-        entity.setOwnerId(userId);
-        entity.setType(request.getType());
-        entity.setTitle(request.getTitle());
-        entity.setContent(request.getContent());
-        entity.setContactPhone(request.getContactPhone());
-        entity.setStatus(0);
-        entity.setIsDeleted(0);
-        entity.setVersion(1);
-        entity.setCreateTime(new Date());
-        entity.setUpdateTime(new Date());
-        entity.setCreateUser(userId);
-        entity.setUpdateUser(userId);
-        complaintSuggestionMapper.insert(entity);
+        OwnerInfo owner = getOwnerByUserId(userId);
+        if (owner == null) {
+            throw new CustomException(ResultCode.NOT_FOUND, "业主信息不存在");
+        }
+
+        // 获取业主的主要房屋
+        OwnerHouseRel rel = ownerHouseRelMapper.selectOne(
+                new LambdaQueryWrapper<OwnerHouseRel>()
+                        .eq(OwnerHouseRel::getOwnerInfoId, owner.getId())
+                        .eq(OwnerHouseRel::getIsPrimary, 1)
+                        .eq(OwnerHouseRel::getIsDeleted, 0)
+                        .last("LIMIT 1")
+        );
+
+        String complaintNo = "CPL" + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
+
+        ComplaintSuggestion complaint = new ComplaintSuggestion();
+        complaint.setComplaintNo(complaintNo);
+        if (rel != null) {
+            complaint.setHouseId(rel.getHouseInfoId());
+        }
+        complaint.setOwnerId(owner.getId());
+        complaint.setType(request.getType());
+        complaint.setTitle(request.getTitle());
+        complaint.setContent(request.getContent());
+        complaint.setContactPhone(StringUtils.isNotBlank(request.getContactPhone())
+                ? request.getContactPhone() : owner.getOwnerPhone());
+        complaint.setStatus(0); // 待处理
+        complaint.setIsDeleted(0);
+        complaint.setVersion(0);
+
+        complaintSuggestionMapper.insert(complaint);
+    }
+
+    // ========== 私有辅助方法 ==========
+
+    private OwnerVO toVO(OwnerInfo entity) {
+        OwnerVO vo = new OwnerVO();
+        BeanUtils.copyProperties(entity, vo);
+        return vo;
+    }
+
+    private OwnerInfo getOwnerByUserId(Long userId) {
+        SysUserInfo user = sysUserInfoMapper.selectById(userId);
+        if (user == null) {
+            return null;
+        }
+
+        LambdaQueryWrapper<OwnerInfo> wrapper = new LambdaQueryWrapper<>();
+        wrapper.eq(OwnerInfo::getOwnerPhone, user.getPhoneNumber())
+                .eq(OwnerInfo::getIsDeleted, 0);
+        return this.getOne(wrapper);
+    }
+
+    private String formatDate(Date date) {
+        if (date == null) {
+            return null;
+        }
+        return DATE_FORMAT.format(date);
     }
 }
